syntax = "proto3";

package task;

option go_package = "example.com/rest-grpc-todo-demo-go/pb;pb";

message Task {
  int32 id = 1;
  string title = 2;
  bool done = 3;
}

message ListTasksRequest {}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message GetTaskRequest {
  int32 id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message DeleteTaskRequest {
  int32 id = 1;
}

message DeleteTaskResponse {}

message CreateTaskRequest {
  string title = 1;
}

service TaskService {
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
  rpc CreateTask (CreateTaskRequest) returns (Task);
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
}
